modified:   index.html

--- a/index.html
+++ b/index.html
@@ -386,9 +386,9 @@
 							<br>
 						<!-- <p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International.  -->
 							<ul>
-								<li>Developed and implemented creative curricula for public health courses.</li>
-								<li>Taught undergraduate and postgraduate students in epidemiology, biostatistics, and research methodology.</li>
-								<li>Mentored students and enhanced research quality by supervising and evaluating theses.</li>
+								<li>Developing and implementing creative curricula for public health courses.</li>
+								<li>Teaching undergraduate and postgraduate students in epidemiology, biostatistics, and research methodology.</li>
+								<li>Mentoring students and enhanced research quality by supervising and evaluating theses.</li>
 							</ul>
 						</p>
 					</div>
@@ -504,7 +504,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="docs/50ShadesofResearch.ppsx">Fifty Shades of Medical Research</a></h3>
-                <p>The presentation outlines the key components of good research practices. Here I emphasized the 
+                <p>This presentation outlines the key components of good research practices. Here I emphasized the 
 					importance of reproducibility of research and ethical methods. Moreover, I discussed common 
 					misconceptions, such as the hierarchy of study designs, Simpson’s paradox, p-hacking, and 
 					stressing the difference between statistical and public health significance.</p>
@@ -533,7 +533,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://journalaim.com/PDF/aim-22-155.pdf">GWR analysis: A statistical method to account for spatial heterogeneity</a></h3>
-                <p>In this study we introduced GWR as a statistical method to account for spatial heterogeneity in data analysis. Unlike ordinary linear regression (OLR), 
+                <p>In this study we introduced geographically weighted regression as a statistical method to account for spatial heterogeneity in data analysis. Unlike ordinary linear regression (OLR), 
 					which assumes a global association across the study area, GWR acknowledges and incorporates local variations in associations, providing valuable 
 					insights for policymakers to design targeted interventions based on localized data patterns.</p>
               </div>
@@ -551,7 +551,7 @@
   
 				  <h3 class="heading"><a href="https://link.springer.com/article/10.1186/s12939-018-0837-6">Differential achievements in 
 					childhood immunization across geographical regions of Pakistan: analysis of wealth-related inequality</a></h3>
-				  <p>An analysis of childhood immunization in Pakistan, based on DHS (2012–13), uncovered significant wealth-related 
+				  <p>In this analysis of childhood immunization in Pakistan, based on DHS (2012–13), we uncovered significant wealth-related 
 					inequalities in immunization coverage. The study emphasizes the need for policies that address both average immunization
 					 rates and inequality gaps.</p>
 				</div>
@@ -565,7 +565,7 @@
   
 				  <h3 class="heading"><a href="index.html">Unveiling Pathways between Social Capital (SC) and Suicidal Ideation (SI) through Moderated Mediation Analysis (Unpublished work!)
 				</a></h3>
-				  <p>We aimed to study the mediating role of anxiety/depression and whether age moderates the relationship of SC and SI among 
+				  <p>Here we aimed to study the mediating role of anxiety/depression and whether age moderates the relationship of SC and SI among 
 					adult transgender in Karachi. A sample of 230 adult transgender who completed measurements of SC, SI, anxiety & depression 
 					and demographic information. Spearman correlation was calculated for scores of SC, SI and anxiety/depression. Bais-corrected
 					bootstrap method using PROCESS for R was utilized for estimating the mediating role of anxiety/depression between SC and SI 
@@ -659,7 +659,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://2063494773">+ 1 (206) 349 4772</a></p>
+	            <p><a href="tel://2063494773">+ 1 (206) 349 4773</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
