--- a/index.html
+++ b/index.html
@@ -573,6 +573,20 @@
 				</div>
 			  </div>
 			</div>
+			<div class="col-md-4 d-flex ftco-animate">
+				<div class="blog-entry justify-content-end">
+				<a href="" class="block-20 zoom-effect" style="background-image: url('images/proj_6.jpg');">
+				</a>
+				<div class="text mt-3 float-right d-block">
+  
+				  <h3 class="heading"><a href="index.html">The Good, The Bad & The Ugly of Medical Research</a></h3>
+				  <p>In this session I discussed the importance of medical research and highlights both its positive 
+					and negative aspects. I emphasized that good research should be reproducible with validated scientific, 
+					statistical, and ethical methods. I also introduced the "Four Horsemen of Research Apocalypse," which 
+					includes issues like ghost and guest authorship, research fraud, predatory journals, and salami slicing.</p>
+				</div>
+			  </div>
+			</div>
 		 </div>
 	  </div>
     </section>
