--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:ow.raza@hotmail.com">ow.raza@hotmail.com</a></p>
+	            <p><a href="mailto:obie.raza@gmail.com">obie.raza@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
