--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 									engagement, I promote open science and embrace a growth mindset, always seeking to learn and apply new 
 									methodologies. Beyond my academic achievements, I am  a strong proponent of <b style="color: #ffbd39;">
 									work-life balance</b> and <b style="color: #ffbd39;">gender equality</b>.</p>
-								<!-- <ul class="about-info mt-4 px-md-0 px-2">
+									<!-- <ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Data Science &amp; Analytics</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, BFSI &amp; Digital Marketing</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
@@ -347,7 +347,7 @@
 			<div class="row">
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2012-2018</span>
+    					<span class="date">2012 - 2018</span>
     					<h2>Ph D (Epidemiology)</h2>
     					<span class="position">Tehran University of Medical Sciences
 							<br>
@@ -359,7 +359,7 @@
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2000-2006</span>
+    					<span class="date">2000 - 2006</span>
     					<h2>MBBS</h2>
     					<span class="position">Ziauddin University
 							<br>
@@ -374,11 +374,48 @@
 			<div class="underline"></div>
 		</div>
 		<br>
-		
+
+		<div class="row">
+			<div class="col-md-6">
+				<div class="resume-wrap ftco-animate">
+					<span class="date"> July 2024 - Present</span>
+					<h2>Research Mentor</h2>
+					<span class="position">BMY Health
+						<br> Canada</span>
+						<br>
+						<br>
+					<!-- <p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International.  -->
+						<ul>
+							<li>Conducting data analysis workshops (using SPSS & STATA) for multiple rounds of internship program in collaboration with BMY Health (Pakistan).</li>
+							<li>As a member of REB, evaluating research proposals to comply with the ethical standards outlined by Human Research Standards Organization (HSRO), Canada.</li>
+						</ul>
+					</p>
+				</div>
+			</div>
+
+			<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date"> June 2020 - Present</span>
+						<h2>Senior Researcher</h2>
+						<span class="position">BMY Health
+							<br> Pakistan</span>
+							<br>
+							<br>
+						<!-- <p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International.  -->
+							<ul>
+								<li>Assessing the goals of interns in the start of the internship and
+									providing advice and encouragement for supporting their research goals.</li>
+								<li>Offering constructive intellectual input to assist interns in the
+									ideation and execution of their research projects.</li>
+							</ul>
+						</p>
+					</div>
+				</div>
+
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date"> Feb 2020-Present</span>
+						<span class="date"> Feb 2020 - Aug 2024</span>
 						<h2>Assistant Professor</h2>
 						<span class="position">School of Public Health
 							<br> Dow University of Health Sciences</span>
@@ -386,9 +423,9 @@
 							<br>
 						<!-- <p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International.  -->
 							<ul>
-								<li>Developing and implementing creative curricula for public health courses.</li>
-								<li>Teaching undergraduate and postgraduate students in epidemiology, biostatistics, and research methodology.</li>
-								<li>Mentoring students and enhanced research quality by supervising and evaluating theses.</li>
+								<li>Developed and implemented creative curricula for public health courses.</li>
+								<li>Taught undergraduate and postgraduate students in epidemiology, biostatistics, and research methodology.</li>
+								<li>Mentored students and enhanced research quality by supervising and evaluating theses.</li>
 							</ul>
 						</p>
 					</div>
@@ -396,7 +433,7 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Nov 2018- Jan 2020</span>
+						<span class="date">Nov 2018 - Jan 2020</span>
 						<h2>Deputy Director - Research</h2>
 						<span class="position">Research Wing
 							<br> PPHI Sindh</span>
@@ -408,7 +445,7 @@
 								<li>Analyzed PPHI Sindh’s database from DHIS for insightful analysis.</li>
 								<li>Established PPHI Sindh’s IRB committee, ensuring ethical research practices.</li>
 								<br>
-								<br>
+							
 							</ul>
 						</p>
 					</div>
@@ -416,7 +453,7 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date"> Apr 2014-SEP 2017</span>
+						<span class="date"> Apr 2014 - SEP 2017</span>
 						<h2>Teaching Assistant</h2>
 						<span class="position">School of Public Health
 							<br> Tehran University of Medical Sciences</span>
@@ -434,7 +471,7 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">May 2013- Dec 2014</span>
+						<span class="date">May 2013 - Dec 2014</span>
 						<h2>Research Assistant</h2>
 						<span class="position">Non-Communicable Diseases Research Center
 							<br> Tehran University of Medical Sciences</span>
@@ -452,7 +489,7 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Feb 2008- Sep 2012</span>
+						<span class="date">Feb 2008 - Sep 2012</span>
 						<h2>Lecturer</h2>
 						<span class="position">Department of Community Health Sciences
 							<br> Ziauddin University</span>
@@ -468,23 +505,16 @@
 							</ul>
 						</p>
 					</div>
-
 				</div>
-			</div>
+			</div>			
+    </section>
 
-		<br>
-		<br>
 
-		
-
-    		<div class="row justify-content-center mt-5">
-    			<div class="col-md-6 text-center ftco-animate">
+			<div class="row justify-content-center mt-5">
+    			<div class="col-md-6 text-center ftco-animate fadeInUp ftco-animated">
     				<p><a href="docs/CV_Mar2024.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
-    	</div>
-    </section>
-
    
 
     <section class="ftco-section" id="portfolio-section">
@@ -664,7 +694,7 @@
           			<span class="icon-map-signs"></span>
           		</div>
           		<h3 class="mb-4">Address</h3>
-	            <p>Seattle, United States</p>
+	            <p>Omaha, United States</p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -682,7 +712,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:ow.raza@hotmail.com">ow.raza@hotmail.com</a></p>
+	            <p><a href="mailto:obie.raza@gmail.com">obie.raza@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -691,7 +721,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="docs/CV_Mar2024.pdf">resumelink</a></p>
+	            <p><a href="docs/OR_resume_Sep2024.pdf">resumelink</a></p>
 	          </div>
           </div>
 
