--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     	<div class="container">
 			<div class="row">
 				<div class="row d-flex align-items-stretch">
-				<!-- <div class="row d-flex"> -->
+				<div class="row d-flex">
 					<div class="col-md-6 col-lg-5 d-flex">
 						<div class="img-about img d-flex align-items-stretch">
 							<div class="overlay">
@@ -220,17 +220,16 @@
 										<img src="images/about-me.png" class="img-fluid rounded b-shadow-a" alt="">
 									  </div>
 									</div>
-									<!-- Details next to profile image -->
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s"> Owais Raza</span></p>
 										<p><span class="title-s"> Assistant Professor</span></p>
 										<p><span class="title-s"> SPH, Dow Univeristy of Health Sciences</span></p>
-										<!-- <p><span class="title-s"> Dow Univeristy of Health Sciences</span></p> -->
+										<p><span class="title-s"> Dow Univeristy of Health Sciences</span></p>
 									  </div>
 									</div>
 								  </div>
-
+								<div class="col-md-6">  	
 								<div class="skill-mf"> <br>
 									<p class="title-s"><b style="color: #ffbd39;">Skills</b></p>
 									<span>R/RStudio</span>
@@ -303,9 +302,9 @@
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
 									<li class="d-flex"><span>BI Tools:</span> <span>Microsoft Power BI, Looker &amp; Tableau</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>Cloud, PySpark, Excel, Git, JIRA, Google Analytics &amp; SEO</span></li>
-									<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Photography, Teaching</span></li>
+									<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Photography, Teaching</span></li> -->
 									
-								</ul> -->
+								</ul>
 							</div>
 						</div>
 
@@ -370,7 +369,7 @@
     		</div>	
 
 		<div class="row">
-			<h1 class="big-4">Experience</h1>
+			<h1 class="big-4">Career</h1>
 			<div class="underline"></div>
 		</div>
 		<br>
@@ -379,15 +378,16 @@
 			<div class="col-md-6">
 				<div class="resume-wrap ftco-animate">
 					<span class="date"> July 2024 - Present</span>
-					<h2>Research Mentor</h2>
+					<h2>Academic Contributions</h2>
 					<span class="position">BMY Health
 						<br> Canada</span>
 						<br>
 						<br>
 					<!-- <p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International.  -->
 						<ul>
-							<li>Conducting data analysis workshops (using SPSS & STATA) for multiple rounds of internship program in collaboration with BMY Health (Pakistan).</li>
-							<li>As a member of REB, evaluating research proposals to comply with the ethical standards outlined by Human Research Standards Organization (HSRO), Canada.</li>
+							<li>Developed and implemented creative curricula for public health courses at Dow University of Health Sciences, enhancing student engagement.</li>
+							<li>Mentored undergraduate and postgraduate students, supervising and evaluating theses to ensure high research quality.</li>
+							<br>
 						</ul>
 					</p>
 				</div>
@@ -396,17 +396,15 @@
 			<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date"> June 2020 - Present</span>
-						<h2>Senior Researcher</h2>
+						<h2>Research Leadership</h2>
 						<span class="position">BMY Health
 							<br> Pakistan</span>
 							<br>
 							<br>
 						<!-- <p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International.  -->
 							<ul>
-								<li>Assessing the goals of interns in the start of the internship and
-									providing advice and encouragement for supporting their research goals.</li>
-								<li>Offering constructive intellectual input to assist interns in the
-									ideation and execution of their research projects.</li>
+								<li>Assessed interns' goals and provided guidance as a Senior Researcher, enabling effective ideation and execution of research projects at BMY Health, Pakistan.</li>
+								<li>Implemented various research projects across 22 districts during my tenure as Deputy Director (Research) with PPHI Sindh, contributing to health improvements.</li>
 							</ul>
 						</p>
 					</div>
@@ -416,16 +414,15 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date"> Feb 2020 - Aug 2024</span>
-						<h2>Assistant Professor</h2>
+						<h2>Data Analysis & Methodology Training</h2>
 						<span class="position">School of Public Health
 							<br> Dow University of Health Sciences</span>
 							<br>
 							<br>
 						<!-- <p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International.  -->
 							<ul>
-								<li>Developed and implemented creative curricula for public health courses.</li>
-								<li>Taught undergraduate and postgraduate students in epidemiology, biostatistics, and research methodology.</li>
-								<li>Mentored students and enhanced research quality by supervising and evaluating theses.</li>
+								<li>Conducted data analysis workshops using SPSS and STATA for internships at BMY Health, Canada, to build interns' competencies in research methods.</li>
+								<li>Facilitated SPSS, STATA, and R workshops for graduate candidates during my time as a Teaching Assistant at Tehran University, supporting their academic growth.</li>
 							</ul>
 						</p>
 					</div>
@@ -434,18 +431,15 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">Nov 2018 - Jan 2020</span>
-						<h2>Deputy Director - Research</h2>
+						<h2>Ethics & Compliance Oversight</h2>
 						<span class="position">Research Wing
 							<br> PPHI Sindh</span>
 						<br>
 						<br>
 						<!-- <p class="mt-4">iQuanti is a data-driven digital marketing analytics and solutions company, helps top 100 global brands.  -->
 							<ul>
-								<li>Implemented various research projects in Sindh.</li>
-								<li>Analyzed PPHI Sindh’s database from DHIS for insightful analysis.</li>
-								<li>Established PPHI Sindh’s IRB committee, ensuring ethical research practices.</li>
-								<br>
-							
+								<li>As a member of the REB, evaluated research proposals to ensure compliance with ethical standards laid out by the Human Research Standards Organization.</li>
+								<li>Established the Institutional Review Board (IRB) committee at PPHI Sindh, reinforcing ethical research practices within a multifaceted health sector.</li>
 							</ul>
 						</p>
 					</div>
