modify url for shinyapp

--- a/index.html
+++ b/index.html
@@ -418,11 +418,11 @@
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://ow-raza.shinyapps.io/ScreeningTestEval/" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
+				<a href="https://oraza.github.io/ScreeningApp/" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://ow-raza.shinyapps.io/ScreeningTestEval/">Screening Test Evaluation Web App </a></h3>
+				  <h3 class="heading"><a href="https://oraza.github.io/ScreeningApp/">Screening Test Evaluation Web App </a></h3>
 				  <p>This web-based app works on the platform of Shiny application, which facilitates the evaluation of screening tools by 
 					  calculating various diagnostic efficiency statistics. The app provides a user-friendly interface and is useful for 
 					  researchers, healthcare professionals, or anyone interested in assessing the effectiveness of a screening test in a 
